fix kanban card dragging making entire document overflow

--- a/mnote-styles/mnote-styles.scss
+++ b/mnote-styles/mnote-styles.scss
@@ -22,6 +22,7 @@
   width: 100%;
   height: 100%;
   font-family: map-get($vars, font-main);
+  overflow: hidden;
 
   @include normalize.normalize;
   @include modules.modules;
